# stt

./: .gitignore  LICENCE  README.md  pyproject.toml
src/stt/: __init__.py  __main__.py  cli.py  config.py  devices.py  doctor.py  models.py  recorder.py  repl.py  sessions.py  state.py  transcriber.py  types.py  util.py
tests/: conftest.py  test_cli.py  test_config.py  test_devices.py  test_repl.py  test_sessions.py  test_state.py  test_transcriber.py  test_util.py
